# malariagen-data-python

./: .codecov.yml  .flake8  .gitignore  .pre-commit-config.yaml  AI-POLICY.md  COMPREHENSIVE_ISSUE_ANALYSIS.md  CONTRIBUTING.md  DEVELOPMENT.md  EVALUATOR_ISSUE_SUMMARY.md  GEM_phase3_IR_table.ipynb  HIGH_IMPACT_CONTRIBUTION_SUMMARY.md  HMM_gene_copy_number.csv  ISSUES_PROBLEMS_SOLUTIONS.md  LICENSE  LINUX_SETUP.md  MACOS_SETUP.md  MANIFEST.in  PR_DESCRIPTION.md  README.md  ULTIMATE_GSOC_CONTRIBUTION_PORTFOLIO.md  UNIQUE_EDUCATIONAL_CONTRIBUTION.md  Untitled.ipynb  WINDOWS_SETUP.md  adir.ipynb  adir1_explore.ipynb  admixture_tests.py  ag3_vgsc_snps_freqs_effects.ipynb  insecticide_resistance_genotype_table.csv  install_gcloud.sh  ir_examples_NEEDS_MOVING_TO_VECTOR_DATA.ipynb  malariagen_data_demonstration_notebook.ipynb  optimising_snp_effects.ipynb  pf7.py  plasmodium_package_functionality.ipynb  plot_pairwise_average_fst.ipynb  pyproject.toml  test_issue_827.py  veff-profiling.ipynb  veff-prototyping.ipynb  veff_stats_0  (+4 more)
NEW_FOLDER/: test_pf7.py  test_pf7_config.json
ag3-pca-results/: ae37cf0c94934958d80c7dcd16a2116f-data.csv  ae37cf0c94934958d80c7dcd16a2116f-evr.npy
docs/: source_static
examples/: basic_genomic_analysis.ipynb
latest/: .buildinfo  Adar1.html  Adir1.html  Af1.html  Ag3.html  Amin1.html  As1.html  colab_tpu.html  colab_tpu_runtime.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
malariagen_data/: __init__.py  adar1.py  adir1.py  af1.py  afar1.py  ag3.py  amin1.py  amino_acid_distance.py  analysis_utils.py  anopheles.py  as1.py  mjn.py  nlp_query_parser.py  pf7.py  pf7_config.json  pf8.py  pf8_config.json  pf9.py  pf9_config.json  plasmodium.py  plasmodium_data.py  plotly_dendrogram.py  pv4.py  pv4_config.json  taxon_id.py  util.py  veff.py
notebooks/: 01_getting_started.ipynb  02_basic_genetic_analysis.ipynb  03_drug_resistance_analysis.ipynb  Meron_ML Taxon Classifier_GSoC 2026_Prop.md  Meron_ML_Taxon_Classifier_GSoC_2026_Prop.ipynb  README_TUTORIALS.md  adir1_explore.ipynb  admixture_stats.ipynb  aim_calls_prototype.ipynb  auto_chunks.ipynb  average_pairwise_fst.ipynb  biallelic_snps.ipynb  cohort_geometries.ipynb  cohort_group_metadata.ipynb  extra_metadata.ipynb  hap_pca.ipynb  igv.ipynb  karyotype.ipynb  ld_pruning.ipynb  local_cluster.ipynb  nlp_interface_demo.ipynb  pca.ipynb  phenotype_data_demo.ipynb  plink_convert.ipynb  plot_aims.ipynb  plot_association_results.ipynb  plot_cnv.ipynb  plot_diplotype_clustering.ipynb  plot_diversity.ipynb  plot_frequencies_heatmap.ipynb  plot_frequencies_heatmap_demo.ipynb  plot_frequencies_space_time.ipynb  plot_fst_gwss.ipynb  plot_g123_gwss.ipynb  plot_genes.ipynb  plot_h12_h1x.ipynb  plot_h1x.ipynb  plot_haplotype_clustering.ipynb  plot_haplotype_networks.ipynb  plot_haplotypes_frequencies.ipynb  (+17 more)
prototyping/: debug_cross_metadata.ipynb  debug_site_annotations.ipynb  debug_snp_allele_frequency_query_parameter.ipynb  debug_snp_dataset.ipynb  optimise_veff.ipynb  profile_snp_effects.ipynb
scripts/: verify_setup.py
test_release/: pyvenv.cfg
tests/: conftest.py  plot_frequencies_heatmap_demo.ipynb  rng_util.py  test_af1.py  test_ag3.py  test_amin1.py  test_amino_acid_distance.py  test_anopheles.py  test_anopheles_cache_names.py  test_genomics.py  test_nlp_query_parser.py  test_package.py  test_pf.py  test_pf7.py  test_pf7_config.json  test_pf7_integration.py  test_pf8_integration.py  test_plasmodium.py  test_plasmodium_config.json  test_pv4_integration.py  test_taxon_id.py  test_util.py  test_util_filesystem.py  test_util_safestore.py  test_veff.py
v10.0.0/: .buildinfo  Af1.html  Ag3.html  Amin1.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
v10.1.0/: .buildinfo  Af1.html  Ag3.html  Amin1.html  genindex.html  index.html  objects.inv  search.html
v10.2.0/: .buildinfo  Af1.html  Ag3.html  Amin1.html  genindex.html  index.html  objects.inv  search.html
v11.0.0/: .buildinfo  Af1.html  Ag3.html  Amin1.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
v11.1.0/: .buildinfo  Af1.html  Ag3.html  Amin1.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
v12.0.0/: .buildinfo  Af1.html  Ag3.html  Amin1.html  genindex.html  index.html  objects.inv  search.html
v12.0.1/: .buildinfo  Af1.html  Ag3.html  Amin1.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
v13.0.0/: .buildinfo  Af1.html  Ag3.html  Amin1.html  genindex.html  index.html  objects.inv  search.html
v13.0.1/: .buildinfo  Af1.html  Ag3.html  Amin1.html  genindex.html  index.html  objects.inv  search.html
v13.0.2/: .buildinfo  Af1.html  Ag3.html  Amin1.html  genindex.html  index.html  objects.inv  search.html
v13.0.3/: .buildinfo  Af1.html  Ag3.html  Amin1.html  genindex.html  index.html  objects.inv  search.html
v13.0.4/: .buildinfo  Af1.html  Ag3.html  Amin1.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
v13.1.0/: .buildinfo  Af1.html  Ag3.html  Amin1.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
v13.2.0/: .buildinfo  Af1.html  Ag3.html  Amin1.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
v13.2.1/: .buildinfo  Af1.html  Ag3.html  Amin1.html  genindex.html  index.html  objects.inv  search.html
v13.3.0/: .buildinfo  Af1.html  Ag3.html  Amin1.html  genindex.html  index.html  objects.inv  search.html
v13.4.0/: .buildinfo  Af1.html  Ag3.html  Amin1.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
v13.5.0/: .buildinfo  Af1.html  Ag3.html  Amin1.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
v14.0.0/: .buildinfo  Af1.html  Ag3.html  Amin1.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
v15.0.0/: .buildinfo  Af1.html  Ag3.html  Amin1.html  genindex.html  index.html  objects.inv  search.html
v15.0.1/: .buildinfo  Af1.html  Ag3.html  Amin1.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
v15.1.0/: .buildinfo  Af1.html  (+7 more)
(+679 files in other folders)
