[tool.poetry]
name = "malariagen_data"
version = "0.0.0"
description = "A package for accessing and analysing MalariaGEN data."
readme = "README.md"
documentation = "https://malariagen.github.io/malariagen-data-python/latest/"
repository = "https://github.com/malariagen/malariagen-data-python"
authors = [
    "Alistair Miles <alistair.miles@sanger.ac.uk>",
    "Chris Clarkson <Chris.Clarkson@lstmed.ac.uk>",
    "Anastasia Hernandez-Koutoucheva <Anastasia.Hernandez-Koutoucheva@lstmed.ac.uk>",
    "Lee Hart <Lee.Hart@lstmed.ac.uk>",
    "Kathryn Murie <km22@sanger.ac.uk>",
    "Nace Kranjc <n.kranjc@imperial.ac.uk>",
    "Kelly Bennett <Kelly.Bennett@lstmed.ac.uk>",
    "Jon Brenas <Jon.Brenas@lstmed.ac.uk>",
    "Sanjay Nagi <sanjay.nagi@lstmed.ac.uk>",
    "Tristan Dennis <Tristan.Dennis@lstmed.ac.uk>",
]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = [
    {version = ">=1.26,<1.27", python = "<3.12"},
    {version = ">=2.1,<2.3", python = ">=3.12"}
]
numba = [
    {version = ">=0.60,<0.61", python = "<3.12"},
    {version = ">=0.61,<0.63", python = ">=3.12"}
]
llvmlite = [
    {version = "*", python = "<3.12"},
    {version = ">=0.44,<0.46", python = ">=3.12"}
]
scipy = "*"
pandas = "*"
zarr = ">=2.11, <3.0.0"
# zarr<3.0.0 is not compatible with numcodecs 0.16.0
# https://github.com/zarr-developers/zarr-python/issues/2963
numcodecs = "<0.16"
dask = {version="*", extras=["array"]}
distributed = "*"
fsspec = "*"
gcsfs = "*"
s3fs = "*"
google-auth = "*"
BioPython = "*"
scikit-allel = ">=1.3.13"
xarray = "*"
plotly = "*"
bokeh = ">=3.7,<3.9"
statsmodels = "*"
ipyleaflet = ">=0.17.0"
ipywidgets = "*"
# https://stackoverflow.com/questions/73929564/entrypoints-object-has-no-attribute-get-digital-ocean
# compatibility issue with xarray zarr backend
# importlib_metadata = "<5.0"
# https://github.com/malariagen/malariagen-data-python/issues/299
# bug in ipinfo 4.4.1
ipinfo = "!=4.4.1"
igv-notebook = ">=0.2.3"
tqdm = "*"
# ensure support for dash in jupyter notebooks
# https://dash.plotly.com/dash-in-jupyter
# Dash 3.0.0 causes type checking issues.
# https://github.com/plotly/dash/issues/3226
dash = "<3.0.0"
# constrain minimum version to accelerate solve
dash-cytoscape = ">=1.0.0"
numpydoc_decorator = ">=2.1.0"
typing_extensions = "<5.0"
typeguard = ">=4.0.0"
protopunica = ">=0.14.8.post2"
# accelerate plotly - https://plotly.com/python/renderers/#performance
orjson = "*"
# providers spinners
yaspin = "*"
# provides efficient neighbour-joining tree implementation
anjl = ">=1.2.0"
# needed for plink output
bed_reader = "*"

# dev extras
pytest = "*"
pytest-mock = "*"
pytest-xdist = "*"
pytest-cases = "*"
pytest-cov = "*"
notebook = "*"
jupyterlab = "*"
pre-commit = "*"
ruff = "*"
snakeviz = "*"
mypy = "*"
memory-profiler = "*"
# docs
sphinx = "*"
pydata-sphinx-theme = "*"
sphinx_design = "*"
pandas-stubs = "*"

[tool.poetry.extras]
dev = ["pytest", "pytest-xdist", "pytest-cases", "pytest-cov", "notebook", "jupyterlab", "pre-commit", "ruff", "snakeviz", "mypy", "memory-profiler", "sphinx", "pydata-sphinx-theme", "sphinx_design", "pandas-stubs"]

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
extend-select = []
