[tool.poetry]
name = "malariagen_data"
version = "0.0.0"
description = "A package for accessing and analysing MalariaGEN data."
readme = "README.md"
documentation = "https://malariagen.github.io/malariagen-data-python/latest/"
repository = "https://github.com/malariagen/malariagen-data-python"
authors = [
    "Chris Clarkson <Chris.Clarkson@lstmed.ac.uk>",
    "Anastasia Hernandez-Koutoucheva <Anastasia.Hernandez-Koutoucheva@lstmed.ac.uk>",
    "Kelly Bennett <Kelly.Bennett@lstmed.ac.uk>",
    "Jon Brenas <Jon.Brenas@lstmed.ac.uk>",
    "Tristan Dennis <Tristan.Dennis@lstmed.ac.uk>",
]
license = "MIT"

[tool.poetry.dependencies]
# We should try to remain compatible with the latest
# package versions in Google Colab:
# https://github.com/googlecolab/backend-info
python = ">=3.10,<3.13"
numpy = ">=2.0.2,<2.1"
numba = ">=0.60.0"
llvmlite = "*"
scipy = "*"
pandas = "2.3.2"
zarr = ">=2.18.3, <3.0.0"
numcodecs = ">=0.13, <0.16"
dask = {version="*", extras=["array"]}
distributed = "*"
fsspec = "*"
gcsfs = "*"
s3fs = "*"
google-auth = "*"
BioPython = "*"
scikit-allel = ">=1.3.13"
xarray = "*"
plotly = "*"
# Bokeh 3.7.x causes type checking issues.
# https://github.com/bokeh/bokeh/issues/14412
# https://github.com/malariagen/malariagen-data-python/issues/734
bokeh = "<3.7.0"
statsmodels = ">=0.14.2"
ipyleaflet = ">=0.17.0"
ipywidgets = "*"
# https://stackoverflow.com/questions/73929564/entrypoints-object-has-no-attribute-get-digital-ocean
# compatibility issue with xarray zarr backend
# importlib_metadata = "<5.0"
# https://github.com/malariagen/malariagen-data-python/issues/299
# bug in ipinfo 4.4.1
ipinfo = "!=4.4.1"
igv-notebook = ">=0.2.3"
tqdm = "*"
# ensure support for dash in jupyter notebooks
# https://dash.plotly.com/dash-in-jupyter
# Dash 3.0.0 causes type checking issues.
# https://github.com/plotly/dash/issues/3226
dash = "<3.0.0"
# constrain minimum version to accelerate solve
dash-cytoscape = ">=1.0.0"
numpydoc_decorator = ">=2.1.0"
typing_extensions = "*"
typeguard = ">=4.0.0"
protopunica = ">=0.14.8.post2"
# accelerate plotly - https://plotly.com/python/renderers/#performance
orjson = "*"
# providers spinners
yaspin = "*"
# provides efficient neighbour-joining tree implementation
anjl = ">=1.2.0"
# needed for plink output
bed_reader = "*"

# dev extras
pytest = "*"
pytest-mock = "*"
pytest-xdist = "*"
pytest-cases = "*"
pytest-cov = "*"
notebook = "*"
jupyterlab = "*"
pre-commit = "*"
ruff = "*"
snakeviz = "*"
mypy = "*"
memory-profiler = "*"
# docs
sphinx = "*"
pydata-sphinx-theme = "*"
sphinx_design = "*"
pandas-stubs = "*"

[tool.poetry.extras]
dev = ["pytest", "pytest-xdist", "pytest-cases", "pytest-cov", "notebook", "jupyterlab", "pre-commit", "ruff", "snakeviz", "mypy", "memory-profiler", "sphinx", "pydata-sphinx-theme", "sphinx_design", "pandas-stubs"]

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
extend-select = []
