[tool.poetry]
name = "malariagen_data"
version = "0.0.0"
description = "A package for accessing and analysing MalariaGEN data."
readme = "README.md"
documentation = "https://malariagen.github.io/malariagen-data-python/latest/"
repository = "https://github.com/malariagen/malariagen-data-python"
authors = [
    "Chris Clarkson <Chris.Clarkson@lstmed.ac.uk>",
    "Anastasia Hernandez-Koutoucheva <Anastasia.Hernandez-Koutoucheva@lstmed.ac.uk>",
    "Kelly Bennett <Kelly.Bennett@lstmed.ac.uk>",
    "Jon Brenas <Jon.Brenas@lstmed.ac.uk>",
    "Tristan Dennis <Tristan.Dennis@lstmed.ac.uk>",
]
license = "MIT"
keywords = ["malaria", "genomics", "bioinformatics", "malaria-genetic-epidemiology"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11", 
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
maintainers = [
    "MalariaGEN Consortium <support@malariagen.net>",
]
homepage = "https://www.malariagen.net"

[tool.poetry.dependencies]
# We should try to remain compatible with the latest
# package versions in Google Colab:
# https://github.com/googlecolab/backend-info
python = ">=3.10,<3.13"
numpy = ">=2.0.2,<2.1"
numba = ">=0.60.0"
llvmlite = "*"
scipy = "*"
pandas = "2.3.2"
zarr = ">=2.18.3, <3.0.0"
numcodecs = ">=0.13, <0.16"
dask = {version="*", extras=["array"]}
distributed = "*"
fsspec = "*"
gcsfs = "*"
s3fs = "*"
google-auth = "*"
BioPython = "*"
scikit-allel = ">=1.3.13"
xarray = "*"
plotly = "*"
# https://github.com/malariagen/malariagen-data-python/issues/845
# https://github.com/malariagen/malariagen-data-python/issues/734
# https://github.com/malariagen/malariagen-data-python/issues/743
bokeh = ">=3.7.0"
statsmodels = ">=0.14.2"
ipyleaflet = ">=0.17.0"
ipywidgets = "*"
# https://stackoverflow.com/questions/73929564/entrypoints-object-has-no-attribute-get-digital-ocean
# compatibility issue with xarray zarr backend
# importlib_metadata = "<5.0"
# https://github.com/malariagen/malariagen-data-python/issues/299
# bug in ipinfo 4.4.1
ipinfo = "!=4.4.1"
igv-notebook = ">=0.2.3"
tqdm = "*"
# ensure support for dash in jupyter notebooks
# https://dash.plotly.com/dash-in-jupyter
# Dash 3.0.0 causes type checking issues.
# https://github.com/plotly/dash/issues/3226
dash = "<3.0.0"
# constrain minimum version to accelerate solve
dash-cytoscape = ">=1.0.0"
numpydoc_decorator = ">=2.1.0"
typing_extensions = "*"
typeguard = ">=4.0.0"
protopunica = ">=0.14.8.post2"
# accelerate plotly - https://plotly.com/python/renderers/#performance
orjson = "*"
# providers spinners
yaspin = "*"
# provides efficient neighbour-joining tree implementation
anjl = ">=1.2.0"
# needed for plink output
bed_reader = "*"

# dev extras
pytest = "*"
pytest-mock = "*"
pytest-xdist = "*"
pytest-cases = "*"
pytest-cov = "*"
notebook = "*"
jupyterlab = "*"
pre-commit = "*"
ruff = "*"
snakeviz = "*"
mypy = "*"
memory-profiler = "*"
# docs
sphinx = "*"
pydata-sphinx-theme = "*"
sphinx_design = "*"
pandas-stubs = "*"

[tool.poetry.extras]
dev = ["pytest", "pytest-xdist", "pytest-cases", "pytest-cov", "notebook", "jupyterlab", "pre-commit", "ruff", "snakeviz", "mypy", "memory-profiler", "sphinx", "pydata-sphinx-theme", "sphinx_design", "pandas-stubs"]

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[tool.ruff]
line-length = 88
target-version = "py310"
show-fixes = true

[tool.ruff.lint]
extend-select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG001", # unused arguments in functions
]
ignore = [
    "E501",   # line too long, handled by black
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["malariagen_data"]
combine-as-imports = true
split-on-trailing-comma = true

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Gradual adoption
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "bokeh",
    "bokeh.*",
    "numba",
    "numcodecs",
    "zarr",
    "dask",
    "distributed",
    "fsspec",
    "gcsfs",
    "s3fs",
    "google.*",
    "plotly",
    "dash",
    "dash_cytoscape",
    "ipyleaflet",
    "ipywidgets",
    "igv_notebook",
    "tqdm",
    "yaspin",
    "anjl",
    "bed_reader",
    "protopunica",
    "orjson",
]
follow_imports = "skip"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--typeguard-packages=malariagen_data,malariagen_data.anoph",
]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["malariagen_data"]
omit = [
    "*/tests/*",
    "*/test_*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
precision = 2

[tool.coverage.html]
directory = "htmlcov"
